--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -90,6 +90,13 @@ else
 
 $date = (date("n/d"));
 
+if ( true )  // remove on prod version on uncomment next line
+//if ( $date == "4/01" )
+	$batMan = (! is_file("/boot/config/plugins/community.applications/IamBatman")) && ($_SESSION['locale'] == "" || $_COOKIE['locale'] == "en_US");
+else
+	$batMan = false;
+
+
 $startupDisplayed = is_file($caPaths['startupDisplayed']) ? "true" : "false";
 if ( $startupDisplayed == "true" && ($_COOKIE['ca_languageSwitch'] ?? false) )
 	$killCookie = "true";
@@ -815,22 +822,28 @@ $(function(){
 			actionCentreRestoreState = true;
 		setupActionCentre();
 	}
-	if ( true && "<?=$pluginWarning?>" !== "false"  && "<?=$firstRun?>" !== "true") {
-		swal({
-			title: "Public Service Announcement",
-			text: "In advance of International Bat Appreciation Day on April 17, Limetech is helping to bring attention to the <a href='https://nationaltoday.com/international-bat-appreciation-day/' target='_blank'>plight of the bats</a>.  Would you like to participate?",
-			type: 'info',
-			html: true,
-			showCancelButton: true,
-			showConfirmButton: true,
-			cancelButtonText: "No",
-			confirmButtonText: "Yes"
-		}, function (isConfirm) {
-			if (isConfirm) {
-				$(".mainArea,.menuItems,.sidebar").css("transform","rotateX(180deg)");
-			}
-		});
-	}
+	<? if ( $batMan ): ?>
+		if ( "<?=$pluginWarning?>" !== "false"  && "<?=$firstRun?>" !== "true") {
+			$(".mainArea,.menuItems,.sidebar").css("transform","rotateX(180deg) rotateY(180deg)");
+			setTimeout(function() {
+				swal({
+					title: "Public Service Announcement",
+					text: "Thank you for participating in the advance celebrations of <a href='https://nationaltoday.com/international-bat-appreciation-day/' target='_blank'>International Bat Appreciation Day</a>.  Would you like to continue the celebrations?",
+					type: 'info',
+					html: true,
+					showCancelButton: true,
+					showConfirmButton: true,
+					cancelButtonText: "No",
+					confirmButtonText: "Yes"
+				}, function (isConfirm) {
+					if (!isConfirm) {
+						$(".mainArea,.menuItems,.sidebar").css("transform","");
+						postNoSpin({action:'batman'});
+					}
+				});
+			 },5000);
+		}
+	<? endif; ?>
 });
 	<?endif;?>
 function disableSort() {
