Switch to backup spotlight icon if download error

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -2034,7 +2034,10 @@ function updateDisplay(content) {
 	setToolTip();
 	enableSearch();
 	$('img').on("error",function() {
-		$(this).attr('src',"/plugins/dynamix.docker.manager/images/question.png");
+		if ( $(this).hasClass("spotlightIcon") ) 
+			$(this).attr('src','<?=$caPaths['SpotlightIcon-backup']?>');
+		else
+			$(this).attr('src',"/plugins/dynamix.docker.manager/images/question.png");
 	});
 	context.init();
 	$('.supportButtonCardContext').each(function() {
