--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -2071,14 +2071,17 @@ function updateDisplay(content) {
 		var description = $(this).html();
 		while (isOverflown(this)) {
 			description = description.slice(0,-5);
+			if ( description.length < 5 )
+				return false;
 			$(this).html(description + "... <span class='card_readmore'><?=tr("Read more")?></span>");
 		}
 	});
+var newSize = 100;
 	$(".ca_applicationName,.betaPopupText,.installedCardText,.upgradePopupText,.ltofficialPopupText").each(function() {
 		while (isOverflown(this)) {
 			var existingSize = $(this).css("font-size");
-
-			var size = existingSize.replace("px","");
+ //			var size = existingSize.replace("px","");
+			var size = parseInt(existingSize);
 			if ( size == newSize + 1 ) {  // looks like browsers in Chinese have a minimum enforced font-size
 				return false;
 			}
