Safari - Prevent main screenscrolling if sidebar opened

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -2950,6 +2950,7 @@ function showSidebarApp(apppath,appname) {
 			});
 		})
 	},500);
+	$(".sidebar").focus();
 }
 
 function showRepoPopup(repository) {
