--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -2958,6 +2958,7 @@ function showRepoPopup(repository) {
 	data.repository = repository;
 	context.destroy("#supportPopup");
 	context.destroy("#actionsPopup");
+	var fromCard = false;
 
 	if ( ! $(".sidebar").is(":visible") ) {
 		$.cookie("sidebarAppName","",{path:"/;SameSite=Lax"});
