--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -184,9 +184,7 @@ var resizeTimer;
 var portsInUse = [];
 var startupSearch = "<?=$_GET['search'] ?? ""?>";
 var iconHoverTimer;
-	var wheelActive = false;
-	var swipeBounce = false;
-
+var wheelActive = false;
 
 $(function(){
 	window.onerror = function(msg,url,lineNo,columnNo, error) {
@@ -726,38 +724,24 @@ $(function(){
 		var name = $(this).data("name");
 		removeApp(path,name);
 	});
-
-	addEventListener("wheel",swipePage);
-
-	
-	function swipePage(event) {
-		console.log(event.deltaX);
+	<?if ($cfg['wheelPage'] == "no"):?>
+	addEventListener("wheel",function(event){
 		if (wheelActive)
 			return;
 		if ( $(".sidebar").is(":visible") )
 			return;
-	 if ($("body").width() < 1260 ) return; // dynamix coding
+		if ($("body").width() < 1260 ) return; // dynamix coding
 		event.stopPropagation();
-		event.preventDefault();
-/* 		if (event.deltaX < 100 && event.deltaX > -100) {
-			setTimeout(function() {
-				wheelActive = false;
-			},200);
-			return;
-		} */
-
 
 		if ( $(".pageRight").is(":visible") ) {
-
 			if (event.deltaX >50) {
 				if ( !$(".pageRight").hasClass("pageNavNoClick")) {
 					wheelActive = true;
 					setTimeout(function() {
 						wheelActive = false;
-					},1000);				
+					},1000);
 					$(".pageRight").click();
 				}
-				
 			}
 			if (event.deltaX < -50) {
 				if (! $(".pageLeft").hasClass("pageNavNoClick")) {
@@ -769,13 +753,10 @@ $(function(){
 					$(".pageLeft").click();
 				}
 			}
-
-		} else 
+		} else
 			wheelActive = false;
-
-
-	}
-	
+	});
+	<?endif;?>
 
 	<? if ($cfg['sidebarOpen'] == "yes"):?>
 		$("body").on("mouseover",".ca_displayIcon,.infoButton,.displayIcon,.card_readmore",function() {
