Support URL and Images for Licence

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -2936,7 +2936,9 @@ function showSidebarApp(apppath,appname) {
 				if ( $(this).hasClass("spotlightIcon") )
 					$(this).attr('src','<?=$caPaths['SpotlightIcon-backup']?>');
 				else
-					$(this).attr('src',"/plugins/dynamix.docker.manager/images/question.png");
+					if ( ! $(this).hasClass("licence") ) {
+						$(this).attr('src',"/plugins/dynamix.docker.manager/images/question.png");
+					}
 			});
 			$('.screenshot').magnificPopup({
 				closeMarkup: "<span class='mfp-close narrow'>"+tr("CLOSE")+"</span>",
