--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
@@ -49,7 +49,7 @@ function debug() {
 <form class='js-confirm-leave' markdown="1" method="POST" action="/update.php" target="progressFrame">
 <input type="hidden" name="#file" value="<?=$plugin?>/<?=$plugin?>.cfg">
 
-<?tr("Hide Deprecated Applications:");?>
+_(Hide Deprecated Applications)_:
 : <select name='hideDeprecated' size='1'>
 	<?=mk_option($cfg['hideDeprecated'], "true", tr("Yes",true))?>
 	<?=mk_option($cfg['hideDeprecated'], "false", tr("No",true))?>
@@ -57,7 +57,7 @@ function debug() {
 
 > <?tr("This setting hides deprecated applications from the list of available apps.  Deprecated apps will still however display within the installed and previous apps sections.");?>
 
-<?tr("Hide Incompatible Applications:");?>
+_(Hide Incompatible Applications)_:
 : <select name='hideIncompatible' size='1'>
 	<?=mk_option($cfg['hideIncompatible'], "true", tr("Yes",true))?>
 	<?=mk_option($cfg['hideIncompatible'], "false", tr("No",true))?>
@@ -65,7 +65,7 @@ function debug() {
 
 > <?tr("This setting will hide applications that are listed as being incompatible with your version of Unraid");?>
 
-<?tr("Allow install of second instance:");?>
+_(Allow install of second instance)_:
 : <select name='defaultReinstall' size='1'>
 	<?=mk_option($cfg['defaultReinstall'],'false',tr("No",true))?>
 	<?=mk_option($cfg['defaultReinstall'],'true',tr("Yes",true))?>
@@ -73,7 +73,7 @@ function debug() {
 
 > <?tr("This option enables another button on the cards and popups which will allow you to reinstall an installed application using it's default template values.  This option can be confusing at times, and is only generally used if you wish to install and have an application running twice simultaneously");?>
 
-<?tr("Automatically open the sidebar:");?>
+_(Automatically open the sidebar)_:
 : <select name='sidebarOpen' size='1'>
 	<?=mk_option($cfg['sidebarOpen'],'yes',tr("Yes",true))?>
 	<?=mk_option($cfg['sidebarOpen'],'no',tr("No",true))?>
@@ -81,7 +81,7 @@ function debug() {
 
 > <?tr("Allows CA to automatically open the sidebar for more information when hovering over an application's icon");?>
 
-<?tr("Allow CA to check for updates to applications:");?>
+_(Allow CA to check for updates to applications)_:
 : <select name="updateCheck" size="1">
 	<?=mk_option($cfg['updateCheck'],"yes",tr("Yes",true))?>
 	<?=mk_option($cfg['updateCheck'],"no",tr("No",true))?>
@@ -89,7 +89,7 @@ function debug() {
 	
 > <?tr("This setting enables CA to check for updates to applications");?>
 
-<?tr("Disable Mouse Wheel Page Changes:");?>
+_(Disable Mouse Wheel Page Changes)_:
 : <select name="wheelPage" size="1">
 	<?=mk_option($cfg['wheelPage'],"no",tr("No",true))?>
 	<?=mk_option($cfg['wheelPage'],"yes",tr("Yes",true))?>
@@ -98,7 +98,7 @@ function debug() {
 > <?tr("This setting disables using left or right on a mouse wheel to change the page");?>
 
 
-<?tr("Allow CA to send any emergency notifications:");?>
+_(Allow CA to send any emergency notifications)_:
 : <select name='notifications' size='1'>
 	<?=mk_option($cfg['notifications'],"yes",tr("Yes",true))?>
 	<?=mk_option($cfg['notifications'],"no",tr("No",true))?>
@@ -109,7 +109,7 @@ function debug() {
 > <?tr("2. Critical security vulnerabilities within Unraid OS");?><br>
 > <?tr("3. Any installed applications which may seriously hinder the operation of your server");?>
 
-<?tr("Save CA debugging information:");?>
+_(Save CA debugging information)_:
 : <select name='debugging' size='1'>
 	<?=mk_option($cfg['debugging'],"yes",tr("Yes",true))?>
 	<?=mk_option($cfg['debugging'],"no",tr("No",true))?>
@@ -117,7 +117,7 @@ function debug() {
 	
 > <?tr("Only enable this when advised to from the author of Community Applications")?>
 
-<?tr("Enable developer mode:");?>
+_(Enable developer mode)_:
 : <select name='dev' size='1'>
 	<?=mk_option($cfg['dev'],"no",tr("No",true))?>
 	<?=mk_option($cfg['dev'],"yes",tr("Yes",true))?>
